Phone section wide complete par alignment

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
       <div class="infastructure-container">
         <section class="main__flex-parent">
-          <aside class="main__flex-child">
+          <aside class="main__flex-child infastructure__phones-parent">
             <img src="/images/illustration-phones.svg" alt="Red, dark-slate blue and white graphic swiggle illustration." class="infastructure__phones-img">
           </aside>
           <article class="main__flex-child">
