--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
   <header class="header">
     <div class="header__flexsb">
         <a href="/" aria-label="Interactive Blogr logo, directing to homepage."><img src="/images/logo.svg" alt="Blogr landing-page text logo." class="logo"></a>
-        <button class="hamburger-btn hamburger-hidden">
+        <button class="hamburger-btn wide-hidden">
           <img src="/images/icon-hamburger.svg" alt="Interactive mobile hamburger icon." class="hamburger-icon" id="hamburger">
         </button>
-        <div class="header__mobilebg-nav-container hidden" id="mobile-nav">
+        <div class="header__mobilebg-nav-container hidden hamburger-hidden" id="mobile-nav">
           <nav class="header__nav">
             <button id="btn-product" class="header-nav__btn darkblue" type="button">
               Product
-              <i class="arrow"></i>
+              <img src="/images/icon-arrow-dark.svg" class="arrow">
             </button>
-            <ul class="header-nav__ul product-ul">
+            <ul class="header-nav__ul product-ul hamburger-hidden">
               <li>
                 <a href="/">Overview</a>
                 <a href="/">Pricing</a>
@@ -39,9 +39,9 @@
             </ul>
             <button id="btn-company" class="header-nav__btn darkblue" type="button">
               Company
-              <i class="arrow"></i>
+              <img src="/images/icon-arrow-dark.svg" class="arrow">
             </button>
-            <ul class="header-nav__ul company-ul">
+            <ul class="header-nav__ul company-ul hamburger-hidden">
               <li>
                 <a href="/">About</a>
                 <a href="/">Team</a>
@@ -51,9 +51,9 @@
             </ul>
             <button id="btn-connect" class="header-nav__btn darkblue" type="button">
               Connect
-              <i class="arrow"></i>
+              <img src="/images/icon-arrow-dark.svg" class="arrow">
             </button>
-            <ul class="header-nav__ul connect-ul">
+            <ul class="header-nav__ul connect-ul hamburger-hidden">
               <li>
                 <a href="/">Contact</a>
                 <a href="/">Newsletter</a>
@@ -62,7 +62,7 @@
             </ul>
           </nav>
 
-      <hr class="hr hamburger-hidden">
+      <hr class="hr wide-hidden">
 
       <div class="header__login-signup-container"> 
         <a href="/" class="login darkblue">Login</a>
